--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1705494584803/work
+absl-py
 aiohttp==3.9.5
 aiosignal==1.3.1
 altair==5.4.0
 anyio==4.3.0
-appnope @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/appnope_1699303798458/work
+appnope
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+asttokens
 async-lru==2.0.4
 attrs==23.2.0
 Babel==2.14.0
@@ -19,16 +19,16 @@ certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
-comm @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3doui0bmzb/croot/comm_1709322861485/work
+comm 
 contourpy==1.2.1
 cycler==0.12.1
 datasets==2.19.0
-debugpy @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/debugpy_1699253073094/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+debugpy
+decorator
 defusedxml==0.7.1
 dill==0.3.8
 et-xmlfile==1.1.0
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+executing
 fastjsonschema==2.19.1
 filelock==3.13.4
 fonttools==4.51.0
@@ -37,17 +37,17 @@ frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
-grpcio @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_7bxiys9u3r/croot/grpc-suite_1701982575666/work
+grpcio @
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.22.2
 idna==3.7
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
-ipykernel @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f428_5tjvx/croot/ipykernel_1705933835534/work
-ipython @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a1tmxj9b4u/croot/ipython_1704833016119/work
+importlib_metadata
+ipykernel
+ipython
 isoduration==20.11.0
-jedi @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/jedi_1699242252604/work
+jedi 
 Jinja2==3.1.3
 json5==0.9.25
 jsonpointer==2.4
@@ -55,19 +55,19 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
-jupyter_client @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/jupyter_client_1701803191601/work
-jupyter_core @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/jupyter_core_1701803168398/work
+jupyter_client
+jupyter_core
 jupyter_server==2.14.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.1.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.26.0
 kiwisolver==1.4.5
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1710435156458/work
+Markdown 
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
-matplotlib-inline @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/matplotlib-inline_1699242375920/work
+matplotlib-inline
 mdurl==0.1.2
 mistune==3.0.2
 mpmath==1.3.0
@@ -77,37 +77,37 @@ narwhals==1.5.3
 nbclient==0.10.0
 nbconvert==7.16.3
 nbformat==5.10.4
-nest-asyncio @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_310vb5e2a0/croot/nest-asyncio_1708532678212/work
+nest-asyncio 
 networkx==3.3
 notebook==7.1.3
 notebook_shim==0.2.4
-numpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work/dist/numpy-1.26.4-cp312-cp312-macosx_11_0_arm64.whl#sha256=37afb6b734a197702d848df93bd67c10b52f6467d56e518950d84b6b1c949d27
+numpy
 openpyxl==3.1.2
 overrides==7.7.0
-packaging @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a6lqg7at4g/croot/packaging_1710807410750/work
+packaging
 pandas==2.2.2
 pandocfilters==1.5.1
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+parso 
+pexpect 
 pillow==10.4.0
-platformdirs @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/platformdirs_1701803010714/work
+platformdirs 
 prometheus_client==0.20.0
-prompt-toolkit @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_c63v4kqjzr/croot/prompt-toolkit_1704404354115/work
+prompt-toolkit
 protobuf==3.20.3
-psutil @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/psutil_1699248249804/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+psutil 
+ptyprocess
+pure-eval
 pyarrow==16.0.0
 pyarrow-hotfix==0.6
 pycparser==2.22
 pydeck==0.9.1
-Pygments @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pygments_1699238063295/work
+Pygments 
 pyparsing==3.1.2
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-dateutil 
 python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
-pyzmq @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_43pxpbos3z/croot/pyzmq_1705605108344/work
+pyzmq
 referencing==0.34.0
 requests==2.31.0
 rfc3339-validator==0.1.4
@@ -116,16 +116,16 @@ rich==13.7.1
 rpds-py==0.18.0
 Send2Trash==1.8.3
 setuptools==68.2.2
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six 
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+stack-data 
 streamlit==1.37.1
 sympy==1.12
 tenacity==8.5.0
-tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1708285739699/work/tensorboard-2.16.2-py3-none-any.whl#sha256=9f2b4e7dad86667615c0e5cd072f1ea8403fc032a299f0072d6f74855775cc45
-tensorboard-data-server @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/tensorboard-data-server_1699263753672/work/tensorboard_data_server-0.7.0-py3-none-macosx_11_0_arm64.whl#sha256=a901d43c41378b15fd6c294bfdf6474d73c7156cc94abbf656490e3cde300103
+tensorboard
+tensorboard-data-server 
 terminado==0.18.1
 tinycss2==1.2.1
 tokenizers==0.19.1
@@ -133,21 +133,22 @@ toml==0.10.2
 torch==2.4.0
 torchaudio==2.2.2
 torchvision==0.19.0
-tornado @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/tornado_1699243541634/work
+tornado
 tqdm==4.66.2
-traitlets @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/traitlets_1699282007293/work
+traitlets 
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth 
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1712099422348/work
+Werkzeug 
 wheel==0.41.2
 xlrd==2.0.1
 xxhash==3.4.1
 yarl==1.9.4
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+zipp
+
