--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
-grpcio @
+grpcio
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
