--- a/requirements.txt
+++ b/requirements.txt
@@ -130,7 +130,7 @@ terminado==0.18.1
 tinycss2==1.2.1
 tokenizers==0.19.1
 toml==0.10.2
-torch==2.4.0
+torch
 torchaudio==2.2.2
 torchvision==0.19.0
 tornado
