--- a/requirements.txt
+++ b/requirements.txt
@@ -131,8 +131,8 @@ tinycss2==1.2.1
 tokenizers==0.19.1
 toml==0.10.2
 torch
-torchaudio==2.2.2
-torchvision==0.19.0
+torchaudio
+torchvision
 tornado
 tqdm==4.66.2
 traitlets 
